chore: init repo, supabase support, pg migrations, scripts

--- a/.env.local
+++ b/.env.local
@@ -1,13 +1,11 @@
-﻿# Database Configuration
-DB_HOST=localhost
-DB_USERNAME=root
-DB_PASSWORD=your_password_here
-DB_DATABASE=calafco_accounting
-DB_PORT=3306
+# Database Configuration - Supabase PostgreSQL
+DB_DIALECT=postgres
+DATABASE_URL=postgresql://postgres:Halil123.@db.amstuosuzncghsebczlh.supabase.co:5432/postgres?sslmode=require
+PG_POOL_SIZE=10
 
 # Application Configuration
-NEXTAUTH_SECRET=your_secret_key_here
+NEXTAUTH_SECRET=calafco_2024_super_secure_random_key_12345
 NEXTAUTH_URL=http://localhost:3000
 
 # Optional: Development overrides
-NODE_ENV=development 
+NODE_ENV=development
