--- a/env.example
+++ b/env.example
@@ -5,6 +5,12 @@ DB_PASSWORD=your_password_here
 DB_DATABASE=calafco_accounting
 DB_PORT=3306
 
+# Postgres/Supabase (alternatif)
+# Eğer Supabase kullanacaksanız aşağıyı doldurun ve DB_DIALECT=postgres yapın
+DB_DIALECT=mysql
+DATABASE_URL=postgresql://postgres:YOUR_PASSWORD@YOUR_HOST:5432/postgres?sslmode=require
+PG_POOL_SIZE=10
+
 # Application Configuration
 NEXTAUTH_SECRET=your_secret_key_here
 NEXTAUTH_URL=http://localhost:3000
