--- a/package.json
+++ b/package.json
@@ -34,12 +34,13 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
     "drizzle-kit": "^0.31.4",
-    "drizzle-orm": "^0.44.4",
+    "drizzle-orm": "^0.44.5",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.536.0",
     "mysql2": "^3.14.3",
     "next": "^14.2.18",
+    "postgres": "^3.4.7",
     "react": "^18",
     "react-dom": "^18",
     "recharts": "^3.1.0",
